--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  justify-content: flex-start;
+  justify-content: center;
   flex-direction: column;
   align-items: center;
   display: flex;
