--- a/src/styles/styles.module.css
+++ b/src/styles/styles.module.css
@@ -4,10 +4,19 @@
     height: 42px;
     border-radius: 40px;
     border: 2px solid black;
-    align-self: center;
     font-size: 19px;
-    margin-top: -15px;
     cursor: pointer;
+}
+
+.submit {
+    margin-top: -15px;
+    align-self: center;
+   
+
+}
+
+.button .delete {
+    background-color: aqua;
 }
 
 .noteInput{
@@ -41,5 +50,13 @@
     border: 2px solid #302d3a;
     text-align: center;
     background-color: rgb(212, 212, 239);
+    overflow: scroll;
+}
 
+.inputDiv{
+    justify-content: center;
+    align-items: center;
+    align-self: normal;
+    flex-direction: column;
+    display: flex;
 }
