--- a/src/styles/styles.module.css
+++ b/src/styles/styles.module.css
@@ -1,100 +1,98 @@
-.button{
-    background-color: rgb(162 158 191);
-    border-radius: 40px;
-    border: 2px solid black;
-    font-size: 19px;
-    cursor: pointer;
-    width: 155px;
-    height: 42px;
+.button {
+  background-color: rgb(162 158 191);
+  border-radius: 40px;
+  border: 2px solid black;
+  font-size: 19px;
+  cursor: pointer;
+  width: 155px;
+  height: 42px;
 }
 
 .submit {
-    margin-top: -15px;
-    align-self: center;
+  margin-top: -15px;
+  align-self: center;
 }
 
 .delete {
-    background-color: inherit;
-    align-self: flex-end;
-    width: 48px;
-    height: 42px;
-    border: none;
-    cursor: pointer;
+  background-color: inherit;
+  align-self: flex-end;
+  width: 48px;
+  height: 42px;
+  border: none;
+  cursor: pointer;
 }
 
-.editDiv{
-    display: flex;
-    flex-direction: row-reverse;
-    /* align-content: baseline; */
-    height: 20px;
-    width: 100%;
-    padding: 0px;
-    margin: 0px;
-
+.editDiv {
+  display: flex;
+  flex-direction: row-reverse;
+  /* align-content: baseline; */
+  height: 20px;
+  width: 100%;
+  padding: 0px;
+  margin: 0px;
 }
 
 .editBtn {
-    width: 36px;
-    height: 50px;
-    border: none;
-    background-color: inherit;
-    cursor: pointer;
-
+  width: 36px;
+  height: 50px;
+  border: none;
+  background-color: inherit;
+  cursor: pointer;
 }
 
 .deleteDiv {
-    background-color: inherit;
-    height: 90%;
-    display: flex;
-    justify-content: flex-end;
-
+  background-color: inherit;
+  height: 90%;
+  display: flex;
+  justify-content: flex-end;
 }
 
-.noteInput{
-    width: 45%;
-    height: 2%;
-    padding: 15px;
-    border-radius: 15px;
-    border: 0;
-    box-shadow: 4px 4px 10px rgb(0 0 0 / 6%);
-    border: 2px solid #302d3a;
-    text-align: center;
-    margin: 20px;
-  }
-  
-
-  .notesBox {
-    width: 100%;
-    height: 100%;
-    display: contents; 
+.noteInput {
+  width: 45%;
+  height: 2%;
+  padding: 15px;
+  border-radius: 15px;
+  border: 0;
+  box-shadow: 4px 4px 10px rgb(0 0 0 / 6%);
+  border: 2px solid #302d3a;
+  text-align: center;
+  margin: 20px;
 }
 
+.notesBox {
+  width: 100%;
+  height: 100%;
+  display: contents;
+}
 
 .notes {
-    
-    width: 50%;
-    height: 20%;
-    padding: 15px;
-    margin: 20px;
-    border-radius: 15px;
-    border: 0;
-    box-shadow: 4px 4px 10px rgb(0 0 0 / 6%);
-    border: 2px solid #302d3a;
-    text-align: center;
-    background-color: rgb(221 221 238);
-    overflow: scroll;
-    opacity: 0.8;
+  width: 50%;
+  height: 20%;
+  padding: 15px;
+  margin: 20px;
+  border-radius: 15px;
+  border: 0;
+  box-shadow: 4px 4px 10px rgb(0 0 0 / 6%);
+  border: 2px solid #302d3a;
+  text-align: center;
+  background-color: rgb(221 221 238);
+  overflow: scroll;
+  opacity: 0.8;
 }
 
-.inputDiv{
-    justify-content: center;
-    align-items: center;
-    align-self: normal;
-    flex-direction: column;
-    display: flex;
+.inputDiv {
+  justify-content: center;
+  align-items: center;
+  align-self: normal;
+  flex-direction: column;
+  display: flex;
 }
 
-.modal {
+.modalContent {
+  overflow-x: hidden;
+}
+
+/* .modal {
     height: 100%;
     width: 100%;
     background-color: rgba(0, 0, 0, 0.4);
@@ -105,24 +103,44 @@
     align-items: center;
     justify-content: center;
     transform: scale(0);
-  }
-  
-  .modalActive {
-    width: 70%;
-    height: 70%;
-    padding: 15px;
-    margin: 20px;
-    border-radius: 15px;
-    border: 0;
-    box-shadow: 4px 4px 10px rgb(0 0 0 / 6%);
-    border: 2px solid #302d3a;
-    text-align: center;
-    background-color: rgb(215 215 232);
-    overflow: scroll;
-    position: absolute;
-    z-index: 2;
-  }
-  
-  .hiddenModal {
-    visibility: hidden;
-  }
+  } */
+
+.modalActive {
+  width: 70%;
+  height: 70%;
+  /* padding: 15px; */
+  margin: 20px;
+  border-radius: 15px;
+  border: 0;
+  box-shadow: 4px 4px 10px rgb(0 0 0 / 6%);
+  border: 2px solid #302d3a;
+  text-align: center;
+  background-color: rgb(215 215 232);
+  overflow: scroll;
+  position: absolute;
+  z-index: 2;
+  overflow-x: hidden;
+}
+
+.hiddenModal {
+  visibility: hidden;
+}
+
+.modalInput {
+  width: 100%;
+  max-width: 100%;
+  background-color: #d7d7e8;
+  border: none;
+   padding: 10px;
+}
+
+.modalInputTitle {
+  height: 23px;
+  font-weight: 700;
+  font-size: medium;
+}
+
+.modalInputText {
+  height: 10%;
+  max-height: fit-content;
+}
