--- a/src/styles/styles.module.css
+++ b/src/styles/styles.module.css
@@ -30,8 +30,6 @@
   width: 100%;
   padding: 0px;
   margin: 0px;
-  
-  
 }
 
 .dateBtn {
@@ -43,12 +41,12 @@
   align-self: center;
 }
 
-
 .deleteDiv {
   background-color: inherit;
   height: 90%;
   display: flex;
   justify-content: flex-end;
+  z-index: 3;
 }
 
 .noteInput {
@@ -122,7 +120,7 @@
   background-color: rgb(215 215 232);
   overflow: scroll;
   position: absolute;
-  z-index: 2;
+  z-index: 1;
   overflow-x: hidden;
 }
 
@@ -135,7 +133,7 @@
   max-width: 100%;
   background-color: #d7d7e8;
   border: none;
-   padding: 10px;
+  padding: 10px;
 }
 
 .modalInputTitle {
@@ -149,41 +147,57 @@
   max-height: fit-content;
 }
 
-.title{
-   
-    height: fit-content;
+.title {
+  height: fit-content;
 }
 
-   .hintBtn:hover::after { 
-    content: attr(dt); /* Выводим текст */
-    position: absolute; /* Абсолютное позиционирование */
-    z-index: 1; /* Отображаем подсказку поверх других элементов */
-    background: #d7d7e8;
-    /* font-family: Arial, sans-serif; Гарнитура шрифта */
-    font-size: 16px; /* Размер текста подсказки */
-    padding: 5px 10px; /* Поля */
-    border: 1px solid #333; /* Параметры рамки */
-    margin: 3px;
-border-radius: 5px;
-font-weight: 400;   
+.hintBtn:hover::after {
+  content: attr(dt); /* Выводим текст */
+  position: absolute; /* Абсолютное позиционирование */
+  z-index: 1; /* Отображаем подсказку поверх других элементов */
+  background: #d7d7e8;
+  /* font-family: Arial, sans-serif; Гарнитура шрифта */
+  font-size: 16px; /* Размер текста подсказки */
+  padding: 5px 10px; /* Поля */
+  border: 1px solid #333; /* Параметры рамки */
+  margin: 3px;
+  border-radius: 5px;
+  font-weight: 400;
 }
 
-.modalTitleDiv{
-    background-color: inherit;
-    width: inherit;
-    width: inherit;
-    height: 15%;
-    display: inline;
+.modalTitleDiv {
+  background-color: inherit;
+  width: inherit;
+  width: 100%;
+  height: 15%;
+  display: inline;
+  font-family: inherit;
+  border: none;
+  outline: none;
+  font-size: 18px;
+  font-weight: 600;
+  text-align: center;
+  resize:none;
+  maxlength: 10px;
+
 }
 
-[contentEditable=true]:focus{
+/* [contentEditable=true]:focus{
 	border:none;
   outline:none;
-}
+} */
 
-.modalTextDiv{
-    height: fit-content;
-    background: inherit;
-    padding-top: inherit;
-    padding-bottom: 25px;
+.modalTextDiv {
+  height: fit-content;
+  background: inherit;
+  padding-top: inherit;
+  padding-bottom: 25px;
+  height: 55%;
+  width: 100%;
+  border: none;
+  outline: none;
+  font-family: inherit;
+  font-size: 16px;
+  text-align: center;
+  resize:none;
 }
