add and styled confirmation modal on delete button (without functions)

--- a/src/styles/styles.module.css
+++ b/src/styles/styles.module.css
@@ -60,9 +60,10 @@
   text-align: center;
   margin: 20px;
   box-shadow: 3px 3px #353140;
-  
 }
-input {outline:none;}
+input {
+  outline: none;
+}
 
 .notesBox {
   width: 100%;
@@ -180,15 +181,9 @@ input {outline:none;}
   font-size: 18px;
   font-weight: 600;
   text-align: center;
-  resize:none;
+  resize: none;
   maxlength: 10px;
-
 }
-
-/* [contentEditable=true]:focus{
-	border:none;
-  outline:none;
-} */
 
 .modalTextDiv {
   height: fit-content;
@@ -202,5 +197,33 @@ input {outline:none;}
   font-family: inherit;
   font-size: 16px;
   text-align: center;
-  resize:none;
+  resize: none;
+}
+
+.confirmationModal {
+  width: 330px;
+  height: 200px;
+  border-radius: 40px;
+  background-color: #bebfcf;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.confirmationModal span {
+  font-size: 18px;
+  font-weight: 700;
+  height: 100%;
+  height: fit-content;
+  width: fit-content;
+  padding: 20px;
+  margin-left: 70px;
+}
+
+.confirmationModalBtnDiv {
+  display: flex;
+    /* justify-content: end; */
+    height: 50px;
+    align-self: end;
+    
 }
